Work page renamed to fotos

--- a/themes/mine/layouts/partials/header.html
+++ b/themes/mine/layouts/partials/header.html
@@ -14,9 +14,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ .Site.BaseURL }}">
-              <img src="{{ .Site.BaseURL }}img/logo.png" alt="{{ .Site.Title }} Logo">
-            </a>
+            <a class="navbar-brand" href="{{ .Site.BaseURL }}">{{ .Site.Title }}<span>Genieten in de panne</span></a>
           </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
