--- a/themes/mine/static/css/airspace.css
+++ b/themes/mine/static/css/airspace.css
@@ -133,8 +133,8 @@ font header .navbar-default .navbar-nav li a:hover {
   background: url("../img/shore.jpg") no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  background-position: 10% 0%;
-  padding: 200px 0 280px 0;
+  background-position: right;
+  padding: 100px 0 100px 0;
   position: relative;
 }
 #slider:before {
