--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -21,8 +21,8 @@
 <link rel="stylesheet" href="{{ .Site.BaseURL }}css/owl.carousel.css" />
 <link rel="stylesheet" href="{{ .Site.BaseURL }}css/bootstrap.min.css" />
 <link rel="stylesheet" href="{{ .Site.BaseURL }}css/font-awesome.min.css" />
-<link rel="stylesheet" href="{{ .Site.BaseURL }}css/airspace-local-fonts.css" />
-<link rel="stylesheet" href="{{ .Site.BaseURL }}css/airspace.css" />
+<link rel="stylesheet" href="{{ .Site.BaseURL }}css/deklif-local-fonts.css" />
+<link rel="stylesheet" href="{{ .Site.BaseURL }}css/deklif.css" />
 <link rel="stylesheet" href="{{ .Site.BaseURL }}css/style.css" />
 <link rel="stylesheet" href="{{ .Site.BaseURL }}css/ionicons.min.css" />
 <link rel="stylesheet" href="{{ .Site.BaseURL }}css/animate.css" />
