--- a/layouts/partials/slider.html
+++ b/layouts/partials/slider.html
@@ -4,8 +4,8 @@
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
                 <div class="block text-center">
-                    <h1 class="animated fadeInUp text-uppercase">{{ .Site.Params.slider.title | safeHTML }}</h1>
-                    <p class="animated fadeInUp">{{ .Site.Params.slider.subtitle | safeHTML }}</p>
+                    <p class="animated fadeInUp">Genieten in De Panne</p>
+                    <h1 class="animated fadeInUp text-uppercase">DE KLIF</h1>
                 </div>
             </div>
         </div>
