--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -28,7 +28,7 @@
 <link rel="stylesheet" href="{{ .Site.BaseURL }}css/animate.css" />
 <link rel="stylesheet" href="{{ .Site.BaseURL }}css/responsive.css" />
 <link rel="stylesheet" href="{{ .Site.BaseURL }}css/syntax.css" />
-
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:700">
 <!-- Js -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
