--- a/themes/mine/static/css/deklif.css
+++ b/themes/mine/static/css/deklif.css
@@ -857,3 +857,82 @@ footer .footer-manu ul li a {
 footer .footer-manu ul li a:hover {
   color: #000;
 }
+
+
+#middle h1 {
+    font-family: 'Lato', sans-serif;
+    font-size: x-large;
+}
+
+
+#middle a {
+    border: 2px solid white;
+    padding: 5px 24px 5px 24px;
+    padding: 0.5em 3em 0.5em 3em;
+    margin-top: 1em;
+    color: white;
+}
+
+#middle .table-col {
+    padding-bottom: 24px;
+    /*padding-bottom: 2em;*/
+}
+.middle-info {
+    background-color: #000000;
+    color: #ffffff;
+}
+
+.middle-waar {
+    background-color: #ededed;
+}
+
+.middle-waar h1 {
+    color: #4bd1a0;
+}
+
+.middle-waar a,.middle-beschikbaarheid a{
+  background-color: #000000;
+}
+
+.middle-beschikbaarheid {
+    background-color: #4bd1a0;
+    height: 100%;
+}
+
+.middle-beschikbaarheid h1 {
+    color: #ededed;
+}
+
+.full-width-container {
+    width: 100%;
+}
+
+.table-container {
+    display: table;
+}
+
+.table-container .table-row {
+    height: 100%;
+    display: table-row;
+}
+
+.table-container .table-row .table-col {
+    display: table-cell;
+    float: none;
+    vertical-align: top;
+}
+
+
+header a.navbar-brand{
+  padding-top: 5px;
+  font-family: 'Lato', sans-serif;
+  font-size: x-large;
+  text-transform: uppercase;
+  text-align: center;
+  color: black;
+}
+header a.navbar-brand span{
+  display: block;
+  font-size: small;
+  font-weight: normal;
+}
