--- a/themes/mine/static/css/deklif.css
+++ b/themes/mine/static/css/deklif.css
@@ -153,11 +153,11 @@ font header .navbar-default .navbar-nav li a:hover {
   color: #E3E3E4;
 }
 #slider .block h1 {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-weight: 100;
-  font-size: 45px;
+  font-size: 75px;
   line-height: 60px;
-  letter-spacing: 10px;
+  letter-spacing: 6px;
   padding-bottom: 45px;
 }
 #slider .block p {
