--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -3,70 +3,23 @@
 <!-- contact form start -->
 {{ with .Site.Params.contact }}
 <section id="contact-form">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 col-sm-12">
-        <div class="block">
-          <form>
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="{{ .form.name }}">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 col-sm-12 text-center">
+                <p>Tom De Munter / Sara Vandesompele</p>
+                <p>Tel Tom: <a href="tel:+32479630740">0479 63 07 40</a></p>
+                <p>Tel Sara: <a href="tel:+32479506431">0479 50 64 31</a></p>
+                <p><a href="mailto:tomdemunter@yahoo.com">tomdemunter@yahoo.com</a></p>
+                <p><a href="mailto:saravandesompele@yahoo.com">saravandesompele@yahoo.com</a></p>
             </div>
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="{{ .form.email }}">
-            </div>
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="{{ .form.subject }}">
-            </div>
-          </form>
         </div>
-      </div>
-      <div class="col-md-6 col-sm-12">
-        <div class="block">
-          <form>
-            <div class="form-group-2">
-              <textarea class="form-control" rows="3" placeholder="{{ .form.message }}"></textarea>
+        <div class="row">
+            <div class="col-md-12 col-sm-12 text-center">
+                    <div class="google-map">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2505.567122014637!2d2.5749567159407367!3d51.097995848374566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47dc96c53b05fdaf%3A0x2ed3350587eebb57!2sDynastielaan+18%2C+8660+De+Panne!5e0!3m2!1sen!2sbe!4v1533658428172" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    </div>
             </div>
-            <button class="btn btn-default" type="submit">{{ .form.button }}</button>
-          </form>
         </div>
-      </div>
     </div>
-    <div id="contact-box" class="row">
-      <div class="col-md-6 col-sm-12">
-        <div class="block">
-
-          <h2>{{ .box.title }}</h2>
-          <ul class="address-block">
-            <li>
-              <i class="fa fa-map-marker"></i>{{ .box.address }}
-            </li>
-            <li>
-              <i class="fa fa-envelope-o"></i>{{ .box.email }}
-            </li>
-            <li>
-              <i class="fa fa-phone"></i>{{ .box.phone }}
-            </li>
-          </ul>
-          <ul class="social-icons">
-          {{ range .social }}  
-            <li>
-              <a href="{{ .url }}"><i class="fa {{ .icon }}"></i></a>
-            </li>
-          {{ end }}
-          </ul>
-        </div>
-      </div>
-      <div class="col-md-6 col-sm-12">
-        {{ with .gmaps}}
-        <div class="block">
-          <h2>{{ .title }}</h2>
-            <div class="google-map">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2505.567122014637!2d2.5749567159407367!3d51.097995848374566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47dc96c53b05fdaf%3A0x2ed3350587eebb57!2sDynastielaan+18%2C+8660+De+Panne!5e0!3m2!1sen!2sbe!4v1533658428172" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-            </div>
-        </div>
-        {{ end }}
-      </div>
-    </div>
-  </div>
 </section>
 {{ end }}
