--- a/layouts/partials/tekst.html
+++ b/layouts/partials/tekst.html
@@ -1,10 +1,7 @@
 <main>
+    {{ partial "global-header.html" . }}
+
     <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="text-center">{{ .Title }}</h1>
-            </div>
-        </div>
         <div class="row">
             <div class="col-lg-6 col-lg-offset-3 col-sm-12 text-center">
                 <p class="text-center">{{ .Content }}</p>
