--- a/themes/mine/layouts/partials/fotos.html
+++ b/themes/mine/layouts/partials/fotos.html
@@ -1,4 +1,4 @@
-<!--{{ partial "global-header.html" . }}-->
+{{ partial "global-header.html" . }}
 
 <!-- Portfolio Start -->
 <section id="portfolio-work">
