--- a/themes/mine/static/css/deklif.css
+++ b/themes/mine/static/css/deklif.css
@@ -505,6 +505,8 @@ font header .navbar-default .navbar-nav li a:hover {
   overflow: hidden;
   margin: 6px;
   position: relative;
+  /*width: 350px;*/
+  height: 234px;
 }
 #portfolio-work .block .portfolio-contant ul li:hover .overly {
   opacity: 1;
@@ -935,4 +937,13 @@ header a.navbar-brand span{
   display: block;
   font-size: small;
   font-weight: normal;
+}
+
+.black-anchor {
+  border: 2px solid white;
+  padding: 5px 24px 5px 24px;
+  padding: 0.5em 3em 0.5em 3em;
+  margin-top: 1em;
+  color: white;
+  background-color: black;
 }
