--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -30,6 +30,9 @@
 <link rel="stylesheet" href="{{ .Site.BaseURL }}css/syntax.css" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:700">
 <link href="https://fonts.googleapis.com/css?family=Limelight" rel="stylesheet">
+<link href="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.css" type="text/css" rel="stylesheet" />
+<link href="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.gallery.min.css" type="text/css" rel="stylesheet" />
+
 <!-- Js -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
@@ -41,6 +44,8 @@
 
 
 <script src="{{ .Site.BaseURL }}js/main.js"></script>
+<script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.gallery.min.js" type="text/javascript" charset="utf-8"></script>
 
 <!--
 /*
