--- a/layouts/partials/middle.html
+++ b/layouts/partials/middle.html
@@ -4,7 +4,7 @@
         <div class="row table-row">
             <div class="middle-info col-md-4 table-col">
                 <div class="block text-center">
-                    <h1 class="text-uppercase">INFO</h1>
+                    <h1 class="text-uppercase middle-logo middle-logo-info">INFO</h1>
                     <p>De klif is een gezellig, recent<br/>gerenoveerd appartement.</p>
                     <p>Een verwarmd binnenzwembad<br/>is slechts een van de vele troeven<br/>die dit appartment biedt.
                     </p>
@@ -12,7 +12,7 @@
             </div>
             <div class="middle-waar col-md-4 table-col">
                 <div class="block text-center">
-                    <h1 class="text-uppercase">WAAR</h1>
+                    <h1 class="text-uppercase middle-logo middle-logo-waar">WAAR</h1>
                     <p>Op wandelafstand van het<br/>centrum van De Panne</p>
                     <p>Dynastielaan 18<br/>
                         8660 De Panne<br/>
@@ -21,7 +21,7 @@
             </div>
             <div class="middle-beschikbaarheid col-md-4 table-col">
                 <div class="block text-center">
-                    <h1 class="text-uppercase">BESCHIKBAARHEID</h1>
+                    <h1 class="text-uppercase middle-logo middle-logo-beschikbaarheid">BESCHIKBAARHEID</h1>
                     <p>Je kan ons altijd contacteren voor<br/>meer informatie</p>
                 </div>
             </div>
