--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -37,13 +37,12 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
 <script src="{{ .Site.BaseURL }}js/bootstrap.min.js"></script>
-<script src="{{ .Site.BaseURL }}js/owl.carousel.min.js"></script>
-<script src="{{ .Site.BaseURL }}js/plugins.js"></script>
-<script src="{{ .Site.BaseURL }}js/min/waypoints.min.js"></script>
-<script src="{{ .Site.BaseURL }}js/jquery.counterup.js"></script>
+<!--<script src="{{ .Site.BaseURL }}js/owl.carousel.min.js"></script>-->
+<!--<script src="{{ .Site.BaseURL }}js/plugins.js"></script>-->
+<!--<script src="{{ .Site.BaseURL }}js/min/waypoints.min.js"></script>-->
+<!--<script src="{{ .Site.BaseURL }}js/jquery.counterup.js"></script>-->
 
 
-<script src="{{ .Site.BaseURL }}js/main.js"></script>
 <script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.gallery.min.js" type="text/javascript" charset="utf-8"></script>
 
