--- a/layouts/partials/tekst.html
+++ b/layouts/partials/tekst.html
@@ -1,9 +1,9 @@
 <main>
     {{ partial "global-header.html" . }}
 
-    <div class="container">
+    <div class="container only-tekst-pagina">
         <div class="row">
-            <div class="col-lg-6 col-lg-offset-3 col-sm-12 text-center">
+            <div class="col-lg-6 col-lg-offset-3 col-sm-12">
                 <p class="text-center">{{ .Content }}</p>
             </div>
         </div>
