Layout van locatie pagina aangepast

--- a/layouts/partials/locatie.html
+++ b/layouts/partials/locatie.html
@@ -1,10 +1,56 @@
-<div class="container">
-    <div class="row">
-        <div class="col-lg-12">
-            <p class="text-center">
+<main>
+    {{ partial "global-header.html" . }}
+
+    <div class="container only-tekst-pagina">
+        <div class="row">
+            <div class="col-lg-6 col-lg-offset-3 col-sm-12">
+                <p class="text-center">
+                    Ons adres <br>
+                    De klif<br/>
+                    Dynastielaan 18<br/>
+                    8660 De Panne<br/>
+                    appartement 108
+                </p>
+
+                <p>​
+
+                    De Panne is vooral gekend voor haar duinen en het breedste strand van de Belgische kust.
+
+                    <br/>De Panne is de ideale bestemming voor het hele gezin.
+                </p>
 
 
-            </p>
+                <p>Het strand biedt eindeloos veel plaats om te wandelen en er ook een mogelijkheid om te strandzeilen.
+                    Het centrum van De Panne heeft een mooie winkelstraat en ook in de Dumontwijk kan je mooie
+                    wandelingen maken.
+                </p>
+
+                <p>Voor wie interesse heeft in de natuur is het bezoekerscentrum “De Nachtegaal” een absolute must. Dit
+                    natuurcentrum ligt tussen het Calmeynbos en de Oosthoekduinen.
+                </p>
+                ​
+
+                <p>Deze kuststad beschikt over talrijke gezellige restaurants en in de zomer kan je talrijke bars
+                    terugvinden op het strand.
+                </p>
+
+
+                <p>Ook aan de kinderen is er gedacht. Op het strand is een heus speelparadijs voor de sloebers
+                    beschikbaar.
+                </p>
+                ​
+
+                <ul>
+                    <li>wandelafstand van tram en bushalte</li>
+                    <li>kinderboerderij Paepehof , veldstraat , Adinkerke</li>
+                    <li>plopsaland en plopsaqua</li>
+                    <li>winkelstraat in De Panne</li>
+                    <li>duinengebied die uitkomt in Bray-Dunes</li>
+                    <li>fietsen in de westhoek</li>
+                    <li>wekelijkse markt op zaterdag van 7u tot 13u</li>
+                </ul>
+
+            </div>
         </div>
     </div>
-</div>
+</main>
