--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -15,9 +15,8 @@
         </div>
         <div class="row">
             <div class="col-md-12 col-sm-12 text-center">
-                    <div class="google-map">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2505.567122014637!2d2.5749567159407367!3d51.097995848374566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47dc96c53b05fdaf%3A0x2ed3350587eebb57!2sDynastielaan+18%2C+8660+De+Panne!5e0!3m2!1sen!2sbe!4v1533658428172" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-                    </div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2505.567122014637!2d2.5749567159407367!3d51.097995848374566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47dc96c53b05fdaf%3A0x2ed3350587eebb57!2sDynastielaan+18%2C+8660+De+Panne!5e0!3m2!1sen!2sbe!4v1533658428172"
+                        class="google-map" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
         </div>
     </div>
