Layout van prijzen pagina aangepast

--- a/themes/mine/static/css/deklif.css
+++ b/themes/mine/static/css/deklif.css
@@ -999,3 +999,8 @@ header a.navbar-brand span{
   background: url(/img/icons/talk.svg)  no-repeat top center;
   background-size: 90px auto;
 }
+
+#prijzen h1 {
+  font-size: 18px;
+  font-weight: bold;
+}
