--- a/layouts/partials/locatie.html
+++ b/layouts/partials/locatie.html
@@ -52,5 +52,8 @@
 
             </div>
         </div>
+        <!--<div class="row">-->
+            <!--{{ partial "google-maps-location.html" }}-->
+        <!--</div>-->
     </div>
 </main>
