--- a/themes/mine/static/css/deklif.css
+++ b/themes/mine/static/css/deklif.css
@@ -698,10 +698,6 @@ font header .navbar-default .navbar-nav li a:hover {
 /*--
 	contact-form Start
 --*/
-#contact-form {
-  padding-top: 70px;
-  padding-bottom: 35px;
-}
 #contact-form .block form .form-group {
   padding-bottom: 15px;
   margin: 0px;
@@ -760,7 +756,7 @@ font header .navbar-default .navbar-nav li a:hover {
   font-size: 25px;
 }
 .google-map {
-  width: 600px;
+  width: 100%;
   height: 450px;
 }
 .google-map #map {
