Thumbnail worden geladen op de foto's pagina. Enkel bij bekijken van foto's wordt de volledige foto geladen.

--- a/layouts/partials/foto-preview.html
+++ b/layouts/partials/foto-preview.html
@@ -7,7 +7,7 @@
                         {{ range .Site.Data.index.fotos}}
                         <li>
                             <a href="{{ $.Site.BaseURL }}{{ .image }}">
-                                <img src="{{ $.Site.BaseURL }}{{ .image }}" alt=""
+                                <img src="{{ $.Site.BaseURL }}{{ .thumbnail }}" alt=""
                                      style="margin-top: -{{ .offset }}px;">
                             </a>
                         </li>
