--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -36,25 +36,12 @@
 <!-- Js -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-<script src="{{ .Site.BaseURL }}js/bootstrap.min.js"></script>
-<!--<script src="{{ .Site.BaseURL }}js/owl.carousel.min.js"></script>-->
-<!--<script src="{{ .Site.BaseURL }}js/plugins.js"></script>-->
-<!--<script src="{{ .Site.BaseURL }}js/min/waypoints.min.js"></script>-->
-<!--<script src="{{ .Site.BaseURL }}js/jquery.counterup.js"></script>-->
-
+    <script src="{{ .Site.BaseURL }}js/bootstrap.min.js"></script>
+    <!--<script src="{{ .Site.BaseURL }}js/owl.carousel.min.js"></script>-->
+    <!--<script src="{{ .Site.BaseURL }}js/plugins.js"></script>-->
+    <!--<script src="{{ .Site.BaseURL }}js/min/waypoints.min.js"></script>-->
+    <!--<script src="{{ .Site.BaseURL }}js/jquery.counterup.js"></script>-->
+<script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
 
 <script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.gallery.min.js" type="text/javascript" charset="utf-8"></script>
-
-<!--
-/*
- * Airspace
- * Ported to Hugo by Giacomo Mariani
- * https://github.com/karju-dev/airspace-hugo
- * Based on the original Jakyll porting by Andrew Lee
- * https://github.com/luminousrubyist/airspace-jekyll
- * Designed and Developed by ThemeFisher
- * https://themefisher.com/
- *
- */
--->
