--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -18,30 +18,27 @@
 {{ .Hugo.Generator }}
 
 <!-- CSS -->
-<link rel="stylesheet" href="{{ .Site.BaseURL }}css/owl.carousel.css" />
-<link rel="stylesheet" href="{{ .Site.BaseURL }}css/bootstrap.min.css" />
-<link rel="stylesheet" href="{{ .Site.BaseURL }}css/font-awesome.min.css" />
-<link rel="stylesheet" href="{{ .Site.BaseURL }}css/deklif-local-fonts.css" />
-<link rel="stylesheet" href="{{ .Site.BaseURL }}css/deklif.css" />
-<link rel="stylesheet" href="{{ .Site.BaseURL }}css/style.css" />
-<link rel="stylesheet" href="{{ .Site.BaseURL }}css/ionicons.min.css" />
-<link rel="stylesheet" href="{{ .Site.BaseURL }}css/animate.css" />
-<link rel="stylesheet" href="{{ .Site.BaseURL }}css/responsive.css" />
-<link rel="stylesheet" href="{{ .Site.BaseURL }}css/syntax.css" />
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:700">
 <link href="https://fonts.googleapis.com/css?family=Limelight" rel="stylesheet">
 <link href="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.css" type="text/css" rel="stylesheet" />
 <link href="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.gallery.min.css" type="text/css" rel="stylesheet" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:700">
+<link rel="stylesheet" href="{{ .Site.BaseURL }}css/bootstrap.min.css" />
+<link rel="stylesheet" href="{{ .Site.BaseURL }}css/font-awesome.min.css" />
+<link rel="stylesheet" href="{{ .Site.BaseURL }}css/style.css" />
+<link rel="stylesheet" href="{{ .Site.BaseURL }}css/ionicons.min.css" />
+<link rel="stylesheet" href="{{ .Site.BaseURL }}css/animate.css" />
+<link rel="stylesheet" href="{{ .Site.BaseURL }}css/syntax.css" />
+<link rel="stylesheet" href="{{ .Site.BaseURL }}css/deklif-local-fonts.css" />
+<link rel="stylesheet" href="{{ .Site.BaseURL }}css/deklif.css" />
+<link rel="stylesheet" href="{{ .Site.BaseURL }}css/responsive.css" />
 
 <!-- Js -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+    <script src="{{ .Site.BaseURL }}js/vendor/jquery.detect_swipe.js"></script>
     <script src="{{ .Site.BaseURL }}js/bootstrap.min.js"></script>
-    <!--<script src="{{ .Site.BaseURL }}js/owl.carousel.min.js"></script>-->
-    <!--<script src="{{ .Site.BaseURL }}js/plugins.js"></script>-->
-    <!--<script src="{{ .Site.BaseURL }}js/min/waypoints.min.js"></script>-->
-    <!--<script src="{{ .Site.BaseURL }}js/jquery.counterup.js"></script>-->
 <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
 
 <script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.gallery.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="{{ .Site.BaseURL }}js/main.js"></script>
