--- a/themes/mine/static/css/deklif.css
+++ b/themes/mine/static/css/deklif.css
@@ -1000,3 +1000,68 @@ header a.navbar-brand span{
   font-size: 18px;
   font-weight: bold;
 }
+
+/**
+ * Featherlight Loader
+ *
+ * Copyright 2015, WP Site Care http://www.wpsitecare.com
+ * MIT Licensed.
+ */
+@-webkit-keyframes featherlightLoader {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes featherlightLoader {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+.featherlight-loading .featherlight-content {
+  -webkit-animation: featherlightLoader 1s infinite linear;
+  animation: featherlightLoader 1s infinite linear;
+  background: transparent;
+  border: 8px solid #8f8f8f;
+  border-left-color: #fff;
+  border-radius: 80px;
+  width: 80px;
+  height: 80px;
+  min-width: 0;
+}
+
+.featherlight-loading .featherlight-content > * {
+  display: none !important;
+}
+
+.featherlight-loading .featherlight-close,
+.featherlight-loading .featherlight-inner {
+  display: none;
+}
+
+.my-custom-featherlight, .my-custom-featherlight:last-of-type  {
+  background-color: rgba(0,0,0,0.95);
+}
+
+.my-custom-featherlight .featherlight-content {
+
+  background-color: rgba(0,0,0,0.8);
+}
+
+.my-custom-featherlight .featherlight-close-icon {
+  background-color: rgba(15, 15, 15, 0.8);
+  color: white;
+}
