--- a/layouts/partials/foto-preview.html
+++ b/layouts/partials/foto-preview.html
@@ -3,10 +3,10 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="portfolio-contant">
-                    <ul data-featherlight-gallery data-featherlight-filter="a">
+                    <ul>
                         {{ range .Site.Data.index.fotos}}
                         <li>
-                            <a href="{{ $.Site.BaseURL }}{{ .image }}">
+                            <a class="gallery" href="{{ $.Site.BaseURL }}{{ .image }}">
                                 <img src="{{ $.Site.BaseURL }}{{ .thumbnail }}" alt=""
                                      style="margin-top: -{{ .offset }}px;">
                             </a>
