--- a/layouts/partials/prijzen.html
+++ b/layouts/partials/prijzen.html
@@ -33,5 +33,26 @@
                 Alle kosten zijn inbegrepen in de vermelde prijzen
             </div>
         </div>
+        <div class="row">
+            <div class="col-lg-12">&nbsp;</div>
+        </div>
+
+        <div class="row">
+            <div class="text-info col-lg-6 col-lg-offset-3 col-sm-12 text-center">
+                weekend = vrijdag 16h tot zondag 18h<br/>
+                midweek = maandag 12h tot vrijdag 12h<br/>
+                week = vrijdag 16h tot vrijdag 12h<br/>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">&nbsp;</div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-6 col-lg-offset-3 col-sm-12 text-center">
+                Bij niet verhuring is andere data bespreekbaar<br/>
+                <br/>
+            </div>
+        </div>
     </div>
 </main>
